--- a/frontend/gdp-app/package.json
+++ b/frontend/gdp-app/package.json
@@ -33,13 +33,15 @@
     "@angular/ssr": "^20.3.9",
     "@primeuix/themes": "^1.2.5",
     "express": "^5.1.0",
+    "primeflex": "^4.0.0",
+    "primeicons": "^7.0.0",
     "primeng": "^20.3.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular/build": "^20.3.9",
-    "@angular/cli": "^20.3.9",
+    "@angular/cli": "^20.0.6",
     "@angular/compiler-cli": "^20.3.0",
     "@types/express": "^5.0.1",
     "@types/jasmine": "~5.1.0",
