--- a/frontend/gdp-app/Containerfile
+++ b/frontend/gdp-app/Containerfile
@@ -3,7 +3,7 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm ci
 
-FROM install AS build 
+FROM install AS build
 WORKDIR /app
 COPY tsconfig*.json ./
 COPY angular.json ./
@@ -12,7 +12,12 @@ COPY src ./src
 RUN npm run build
 
 FROM nginx:alpine AS deploy
-COPY --chown=644 nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /app/dist/gdp-app/browser /usr/share/nginx/html
+WORKDIR /usr/share/nginx/html
+COPY --chown=root:root nginx.conf /etc/nginx/nginx.conf
+COPY --from=build /app/dist/gdp-app/browser .
+ENV API_URL=http://node:3000
 EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+
+# Correct env.js path
+CMD sed -i "s|http://localhost:3000|$API_URL|" /usr/share/nginx/html/public/env.js && \
+    nginx -g "daemon off;"
