--- a/frontend/gdp-app/Containerfile
+++ b/frontend/gdp-app/Containerfile
@@ -1,4 +1,4 @@
-FROM node:22.14.0-bookworm AS install
+FROM node:25-alpine AS install
 WORKDIR /app
 COPY package*.json ./
 RUN npm ci
@@ -11,10 +11,9 @@ COPY public ./public
 COPY src ./src
 RUN npm run build
 
-FROM nginx:alpine AS deploy
-WORKDIR /usr/share/nginx/html
+FROM nginx:1.29-alpine-slim AS deploy
 COPY --chown=root:root nginx.conf /etc/nginx/nginx.conf
-COPY --from=build /app/dist/gdp-app/browser .
+COPY --from=build /app/dist/gdp-app/browser /usr/share/nginx/html
 ENV API_URL=http://node:3000
 EXPOSE 80
 
